final attempt to push

--- a/02-intro.Rmd
+++ b/02-intro.Rmd
@@ -1,6 +1,6 @@
 --- 
-title: "Bookdown Template"
-author:
+title: "Drivers of Littoral Macrophyte Coverage"
+author: "Rebecca Rugg"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -15,10 +15,19 @@ link-citations: yes
 github-repo: rstudio/bookdown-demo
 ---
 
-INTRODUCTION
+# Introduction
+The study of inland water quality has captivated scientists and the public alike as water scarcity, pollution and degradation have taken front page in newspapers around the world. Lake condition, referred to as Trophic Status (TS), is a common metric used by limnologists, researchers, and natural resource managers to communicate about the condition of lakes and to decide upon best management practices. Lakes are classified into one of several categories: most generally, oligotrophic, mesotrophic and eutrophic in increasing order of productivity. While productivity may seem like a positive ecological attribute, an excess of nutrients and organisms can lead to harmful conditions for wildlife and the surrounding ecosystem. This most often presents itself in the form of algal blooms, anoxic conditions and fish kills, but can also including cyanotoxins which are harmful to humans and animals alike. 
+The most common parameters used to determine TS in lentic ecosystems are Total Phosphorus (TP), Total Nitrogen (TN), and Chlorophyll A (Chl A). Chlorophyll A is the mostly commonly examined metric for determining trophic status and is biologically connected to Phosphorus and Nitrogen concentrations in the water. These processes are critical to understanding ecosystem condition and best management practices. 
+  The heightened awareness of water quality around the world has driven scientists and natural resource managers to investigate other factors playing a role in shifts in trophic status. Led in part by an increased interest in lake greening, some limnologists have begun broadening the scope of their studies to include not only pelagic primary productivity but also the properties and patterns of the littoral zone. The understanding of the Littoral Zone and its relationship to Trophic Status, while growing, is still not well studied or understood and there is a lack of literature on the topic. The Littoral Zone is defined by the EPA as the nearshore area of a lake that extends from shore to the deepest point where submerged aquatic vegetation can be sustained or where the substrate receives one percent of light (US EPA, 2013). This area is often home to a wide variety of aquatic taxa. Macrophytes are “aquatic plants growing in or near water. They may be either emergent (i.e., with upright portions above the water surface), submerged or floating” (US EPA, 2013). The growth and density of these macrophytes are driven by a wide variety of biotic and abiotic factors and can be an indicator of lake health (Grzybowski et al., 2023). This same study discussed the stressor-response relationship that is often exhibited between ecological factors and littoral zone productivity response (Grzybowski et al., 2023). This study also investigated macrophyte species composition within several lakes worldwide and classified each lake based on the macrophyte taxonomy and other related characteristics. They, along with other studies, found that lakes that are clear and oligotrophic are often dominated in primary productivity by macrophyte biomass while turbid or eutrophic lakes often lose macrophyte biomass and are dominated by phytoplankton (Grzybowski et al., 2023; Scheffer et al., 2001; Scheffer & van Nes, 2007).
+ A study in eastern Europe examined correlations between lake macrophyte cover and the surrounding lake and landscape features. This study concluded that between 29 and 55 percent of the variation in littoral macrophyte coverage could be explained by the physio-chemical, hydrological and land use factors studied (Cheruvelil & Soranno, 2008). Research has also concluded that lake nutrient concentrations typically decrease as Nitrogen and Phosphorus are taken up by littoral macrophytes and benthic algae, therefore nutrient concentrations should be examined along with littoral conditions in order to understand potential confounding variables (Grzybowski et al., 2023). 
+Unfortunately, anthropogenic changes have also made a significant impact on the ability to predict and understand patterns of primary productivity in inland waters (Cheruvelil & Soranno, 2008). Due to these confounding variables, primary productivity must be studied even more critically and with sensitivity to potential external impacts when the water body lies within a heavily influenced watershed. 
+  	Only a few studies have taken samples and conducted analysis across a wide range of landscapes and physical characteristics. The figure below displays the lakes analyzed in the National Lakes Assessment, a widespread national survey of lake conditions and characteristics in 2007.
+	The primary productivity of lakes is a critical ecological concept and significant portions of biogeochemistry, limnology, and aquatic ecology are dedicated to understanding where the dominant primary productivity is within the lake and what factors have caused it to be that way. The literature indicates that lakes with areas with submerged vegetation generally harbor a more diverse macroinvertebrate assemblage and higher animal biomass than vegetation- free areas (Hargeby et al., 1994). Other studies have found that phytoplankton biomass increases with increases in nutrient concentrations and decreases with submerged macrophyte coverage (Muylaert et al., 2010). With high concentrations of traditionally limiting nutrients (N and P), limitation and competition can shift away from Phosphorus and shift towards light causing competition between phytoplankton and littoral macrophytes (Portielje & Van der Molen, 1999). 
+	Finally, some studies have indicated that landuse and landcover is one of the main determinants of macrophyte status (Grzybowski et al., 2023). Land use and land cover changes have been a significant challenge for ecosystem, wildlife and human health in the United States over the past several decades and understanding the relationship to macrophyte coverage is critical for improving management and scientific understanding. 
 
-The study of inland water quality has captivated scientists and the public alike as water scarcity, pollution and degradation have taken front page in newspapers around the world. Lake condition, referred to as Trophic Status (TS), is a common metric used by limnologists, researchers, and natural resource managers to communicate about the state of lakes and to decide upon best management practices. Lakes are classified into one of several categories: most generally, oligotrophic, mesotrophic and eutrophic in increasing order of productivity. While productivity may seem positive, an excess of nutrients and organism can lead to harmful conditions for wildlife and the surrounding ecosystem, most often seen in the form of algal blooms, anoxic conditions and fish kills, but also including cyanotoxins which can be harmful not only to internal organisms but to passersby interacting with the system. The most common parameters used to determine TS in lentic ecosystems are Total Phosphorus (TP), Total Nitrogen (TN), and Chlorophyll A (Chl A). Sources for increased TN and TP in lakes. Chl A is perhaps the most commonly used metric for determining Trophic Status. These three metrics do not always align, however, and many professionals have differing opinions surrounding which is the most accurate and consistent metric for determining Trophic Status. There is a need for better understanding of long-term ecological health as it aligns with lake Trophic Status and changes over time. 
-	There is also some controversy surrounding the global condition of lakes. Many believe that global greening is occurring meaning that more and more lakes are shifting from oligotrophic or mesotrophic to eutrophic. Many other scientists believe that lakes have maintained more or less the same state over the past several decades. It is important to understand trophic condition (TS) because it can help to inform management decisions and trigger mitigation efforts and can also help scientists to understand aquatic ecology but as outlined above, agreeing upon metrics and global trends is not always straightforward. 
-	Driven in part by an increased interest in greening of lakes, some limnologists have begun studying the properties and patterns of the littoral zone. The understanding of the Littoral Zone and its relationship to Trophic Status, while growing, is still not well studied, or understood and there is a seeming lack of literature discussing these topics. The Littoral Zone is defined by the EPA as the nearshore area of a lake that extends from shore to the deepest point where submerged aquatic vegetation can be sustained or where the substrate receives one percent of light (US EPA, 2013). Macrophytes are “aquatic plants growing in or near water. They may be either emergent (i.e., with upright portions above the water surface), submerged or floating” and the macrophytes often studied and studied within this thesis live in the littoral zone of the lake (US EPA, 2013). Littoral Macrophytes can be a good indicator of ecological health: too few can indicate, according to the EPA, high turbidity, herbicides, or salinization while too many can indicate nutrient loading and can affect ecosystem health (US EPA, 2013).
-	A study in eastern Europe while another study in the Northern United States examined correlations between lake macrophyte cover and the surrounding lake and landscape features. Their study concluded that they were able to predict between 29 and 55 percent of variation in the littoral macrophyte coverage using multiple regressions of many parameters describing the lake and surrounding system (Cheruvelil & Soranno, 2008). This study examined parameters including physio-chemistry, land use and land cover, hydrology and more and concluded that while a suite of different variables can be used together with one another to predict macrophyte cover, different growth forms and species should be examined separately and that anthropogenic changes have significant impacts on macrophyte cover and can overwrite some of the natural or expected patterns (Cheruvelil & Soranno, 2008). This study did not examine changes over time or lakes in a wide range of ecosystems. Another, smaller-scale study in Western Europe examined six lakes that varied in Trophic Status and sampled many parameters investigating biological indicators to track responses in pelagic and littoral zones (Eigemann et al., 2016). This study concluded that while pelagic productivity changes, mainly phytoplankton density may be the best indicator of trophic changes on a short temporal scale, “macrophytes may better reflect the long-term consequences of eutrophication in littoral areas, which can affect the ecological status of lakes for decades” (Eigemann et al., 2016). This study also cited another paper that, upon investigating correlations between littoral macrophytes and other parameters hypothesized that a lack of correlation may not actually indicate a lack of relationship but may be indicating a longer-term ecosystem process at play, namely the uptake of Phosphorus and other nutrients into the littoral vegetation thus increasing macrophyte density over time and reducing P concentrations in the water (Schneider et al., 2020). 
-	While these studies have a grasp on some of the spatial variation driving these patterns, they have not examined the temporal variation that is so critical to understanding ecosystem processes. This thesis serves to investigate the role that littoral macrophytes can play in helping scientists and natural resource managers understand lake health and long-term trends in limnology that may not be immediately obvious from looking at traditional trophic metrics alone. Through the study of both temporal and spatial variation across lentic ecosystems in the United States both correlation and trends over time will be pursued. 
+A Map of All Site in the NLA Dataset for 2007
+```{r, 2-1}
+qtm(clean_07, symbols.size = 0.3, symbols.col = "cadetblue4", title = "All NLA Sites 2007")
+```
+
+  The above sites are representative of widely diverse ecological characteristics and human influenced landscapes. These sites were chosen from the 2007 dataset to be analyzed for correlations between a variety of metrics and the fractional littoral macrophyte coverage present at the given lake. 
