--- a/01-abstract.Rmd
+++ b/01-abstract.Rmd
@@ -1,1 +1,3 @@
 # Abstract
+
+  Trophic Status as a measure of lake condition is a critical metric for countless fields of study and impacts countless groups of people. While science has historically focused on the pelagic zone when looking to determine trophic status, the littoral zone and the plants there should not be ignored. This paper discusses different drivers of macrophyte coverage in the littoral zone through data analysis of data from 2007 from the National Lakes Assessment conducted by the EPA. This study examines the effect of dominant basin landcover, Chlorophyll A, Total Nitrogen, Total Phosphorus and Trophic Status as determined by Chlorophyll A concentrations. No significant correlations were established which is an expected result for a study done at this spatial scale. 
