--- a/index.Rmd
+++ b/index.Rmd
@@ -1,28 +1,17 @@
 --- 
-title: "Bookdown Template"
-author:
+title: "Drivers of Littoral Macrophyte Coverage"
+author: "Rebecca Rugg"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
 bibliography: [book.bib, packages.bib]
 # url: your book url like https://bookdown.org/USERNAME/REPO
 # cover-image: path to the social sharing image like images/cover.jpg
-description: |
-  This is a minimal example of using the bookdown package to write a book.
-  The HTML output format for this example is bookdown::gitbook,
-  set in the _output.yml file.
+description: Drivers of Littoral Macrophyte Coverage
 link-citations: yes
 github-repo: rstudio/bookdown-demo
 ---
 
 # Overview
 
-This is a _sample_ book written in **Markdown**. 
-
-## Render book
-
-You can build the book from the R console:
-
-```{r, eval=FALSE}
-bookdown::render_book()
-```
+This is a literature review and preliminary data analysis of drivers of littoral macrophyte density in lakes in the continental United States. This study was completed as part a capstone project for a Watershed Science program at Colorado State University. 
